--- a/web/package.json
+++ b/web/package.json
@@ -3,28 +3,36 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "biome check .",
     "format": "biome format --write .",
-    "check": "biome check --write ."
+    "check": "biome check --write .",
+    "prepare": "husky"
   },
   "dependencies": {
     "better-sqlite3": "^12.4.1",
-    "next": "^14.2.0",
+    "d3-cloud": "^1.2.7",
+    "framer-motion": "^12.23.24",
+    "next": "^15.1.7",
     "next-themes": "^0.4.6",
+    "posthog-js": "^1.292.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-wordcloud": "^1.2.7",
+    "recharts": "^3.4.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.5",
     "@types/better-sqlite3": "^7.6.13",
     "@types/bun": "latest",
+    "@types/d3-cloud": "^1.2.9",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.4",
     "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10",
+    "husky": "^9.1.7",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5.9.3"
