--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "better-sqlite3": "^12.4.1",
     "d3-cloud": "^1.2.7",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.553.0",
     "next": "^15.1.7",
     "next-themes": "^0.4.6",
     "posthog-js": "^1.292.0",
