feat: add category icons and mobile-responsive improvements
- Add Lucide icons to all party platform categories (Economía, Salud, etc.)
- Add icons to About page category list with matching design
- Create PartyPlatform client component with synchronized navigation
  - Navigation links now open corresponding accordion sections
  - Smooth scrolling to opened sections
- Improve mobile responsiveness across party detail pages
  - Hide navigation sidebar on mobile (lg+ only)
  - Stack party header vertically on mobile
  - Responsive text sizes and padding throughout
  - Full-width buttons on mobile, horizontal on larger screens
- Fix accordion text wrapping issues
  - Add break-words to all text content
  - Proper flex constraints on proposal list items
  - Prevent horizontal overflow on mobile
- Filter out duplicate "Ambiente y Liderazgo Verde" category
- Improve dark mode hover states in accordions

--- a/web/package.json
+++ b/web/package.json
@@ -8,8 +8,7 @@
     "start": "next start",
     "lint": "biome check .",
     "format": "biome format --write .",
-    "check": "biome check --write .",
-    "prepare": "husky"
+    "check": "biome check --write ."
   },
   "dependencies": {
     "better-sqlite3": "^12.4.1",
