--- a/web/.env.example
+++ b/web/.env.example
@@ -2,3 +2,7 @@
 # Get your API key from https://app.posthog.com/project/settings
 NEXT_PUBLIC_POSTHOG_KEY=your_posthog_project_api_key_here
 NEXT_PUBLIC_POSTHOG_HOST=https://app.posthog.com
+
+# OpenAI API Configuration
+# Get your API key from https://platform.openai.com/api-keys
+OPENAI_API_KEY=your_openai_api_key_here
