--- a/web/package.json
+++ b/web/package.json
@@ -11,12 +11,17 @@
     "check": "biome check --write ."
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.65",
+    "@assistant-ui/react": "^0.11.37",
+    "@assistant-ui/react-ai-sdk": "^1.1.9",
+    "ai": "^5.0.93",
     "better-sqlite3": "^12.4.1",
     "d3-cloud": "^1.2.7",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
     "next": "^15.1.7",
     "next-themes": "^0.4.6",
+    "openai": "^6.8.1",
     "posthog-js": "^1.292.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
