--- a/web/package.json
+++ b/web/package.json
@@ -26,7 +26,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-wordcloud": "^1.2.7",
-    "recharts": "^3.4.1"
+    "recharts": "^3.4.1",
+    "sqlite-vec": "^0.1.7-alpha.2"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.5",
