--- a/pipeline/requirements.txt
+++ b/pipeline/requirements.txt
@@ -21,6 +21,7 @@ python-dotenv>=1.0.0
 
 # Database
 sqlite-utils>=3.35.0
+sqlite-vec>=0.1.0  # Vector similarity search extension
 
 # Progress & CLI
 tqdm>=4.66.0
@@ -31,6 +32,7 @@ rich>=13.7.0  # Better terminal output
 tenacity>=8.2.0  # Retry logic
 python-dateutil>=2.8.0
 requests>=2.31.0
+python-slugify>=8.0.0  # URL-safe string slugification
 
 # Development/Testing (optional)
 pytest>=8.0.0
