--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "posthog-js": "^1.292.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-markdown": "^10.1.0",
     "react-wordcloud": "^1.2.7",
     "recharts": "^3.4.1",
     "sqlite-vec": "^0.1.7-alpha.2"
