fix: update Docker build for full Next.js deployment with Bun
- Add OPENAI_API_KEY build argument to Dockerfile
- Wrap sqlite-vec loading in try-catch to handle missing extension during build
- Update .dockerignore to exclude web/.next and web/out directories
- Change Docker deployment from static export to full Next.js server with Bun
- Copy built .next directory and node_modules from builder stage to runner
- Use 'bun run next start' to serve the application with API routes

This enables the chat API to work in production while using Bun as the runtime.
Fixes sqlite-vec loading issues during Alpine Linux builds.

--- a/.dockerignore
+++ b/.dockerignore
@@ -13,6 +13,8 @@ coverage
 # Next.js
 .next/
 out/
+web/.next/
+web/out/
 
 # Production
 build
@@ -31,12 +33,15 @@ yarn-error.log*
 # Local env files
 .env*.local
 .env
+web/.env
+web/.env*.local
 
 # Vercel
 .vercel
 
 # Typescript
 *.tsbuildinfo
+web/*.tsbuildinfo
 
 # Git
 .git
