--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "next-themes": "^0.4.6",
     "openai": "^6.8.1",
     "posthog-js": "^1.292.0",
+    "posthog-node": "^5.11.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-is": "^19.2.0",
