--- a/web/.env.example
+++ b/web/.env.example
@@ -1,3 +1,6 @@
+# Site Configuration
+NEXT_PUBLIC_SITE_URL=https://eleccionescostarica.org
+
 # PostHog Analytics Configuration
 # Get your API key from https://app.posthog.com/project/settings
 NEXT_PUBLIC_POSTHOG_KEY=your_posthog_project_api_key_here
