feat: add clickable PDF citations with page navigation
Users can now click on page citations (e.g., [Página 35]) throughout the app
to view the exact PDF page where information appears. Citations open in a new
tab using a native browser PDF viewer.

Features:
- PDF serving API endpoint at /api/pdf/[party]
- Simple iframe-based PDF viewer with native browser support
- Clickable citations in ChatSidebar (when single party selected)
- Clickable citations in ComparisonView (party context always known)
- Clickable citations on party detail pages
- Dark mode support for PDF viewer
- Deep linking to specific pages via #page=X fragment

Technical approach:
- Abandoned react-pdf due to Next.js SSR compatibility issues
- Uses simple <iframe> with browser's native PDF renderer
- Parses citations with regex: /(\[Páginas? \d+(?:-\d+)?\])/g
- Extracts page numbers and generates links to /pdf/[party]?page=X
- Disabled noArrayIndexKey lint rule for stable split() results

--- a/web/biome.json
+++ b/web/biome.json
@@ -14,7 +14,8 @@
       },
       "suspicious": {
         "noExplicitAny": "warn",
-        "noUnknownAtRules": "off"
+        "noUnknownAtRules": "off",
+        "noArrayIndexKey": "off"
       },
       "security": {
         "noDangerouslySetInnerHtml": "off"
