--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "ai": "^5.0.93",
     "better-sqlite3": "^12.4.1",
     "d3-cloud": "^1.2.7",
+    "flowtoken": "^1.0.40",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
     "next": "^15.1.7",
